---
source: prqlc/prql-compiler/tests/integration/queries.rs
expression: "# mssql:test\nfrom tracks\nselect {genre_id, media_type_id, album_id}\ngroup {genre_id, media_type_id} (sort {-album_id} | take 1)\nsort {-genre_id, media_type_id}\n"
input_file: prqlc/prql-compiler/tests/integration/queries/distinct_on.prql
---
from tracks
select {genre_id, media_type_id, album_id}
group {genre_id, media_type_id} (
  sort {-album_id}
  take 1
)
sort {-genre_id, media_type_id}

